[project]
name = "changelogllm"
version = "0.1.0"
description = "CLI tool to find changelogs between library versions"
authors = [
    {name = "openhands",email = "openhands@all-hands.dev"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7"
]

[project.scripts]
changelogllm = "changelogllm.cli:cli"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
